--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,12 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: Ant@1
+  inputs:
+    buildFile: 'build.xml'
+    options: 
+    targets: 'test'
+    publishJUnitResults: true
+    testResultsFiles: '**/TEST-*.xml'
+    testRunTitle: 'test'
+    javaHomeOption: 'JDKVersion'
