--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,21 +2,18 @@
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 trigger:
 - main
-
-pool: Default
-
+pool:
+  vmImage: ubuntu-latest
 steps:
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'Path'
-    jdkDirectory: '/mnt/d/Devs/javas/jdk1.8.0_202-lnx/bin/java'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
-    options: '-DskipTests'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
