--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,13 @@ trigger:
 - main
 pool:
   vmImage: ubuntu-latest
+variables:
+- group: my-variable-group
 steps:
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: 'env'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
