--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,10 @@ steps:
 - task: Bash@3
   inputs:
     targetType: 'inline'
-    script: 'env'
+    script: |
+      env
+      pwd
+      ls -al
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
